<?xml version="1.0" encoding="utf-8"?>
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
		<FrameLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:id="@+id/parentFrameLayout">
			<ImageView
			android:src="@drawable/background"
			android:scaleType="fitXY"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:id="@+id/backgroundImageView">
			</ImageView>
			<LinearLayout 
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:id="@+id/linearLayout">
				<LinearLayout 
				android:orientation="horizontal"
				android:gravity="center"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:id="@+id/timerBackground"
				android:background="@drawable/timerbackground">
					<TextView
					style="@style/timerText" 
 					android:text="@string/timer"
 					android:id="@+id/timer">
					</TextView>
				 	<TextView
					style="@style/timerText" 
 					android:text="@string/timerMs"
 					android:id="@+id/timerMs"
 					android:textSize="30sp"
 					android:paddingTop="30sp">
					</TextView> 
				</LinearLayout>
				<LinearLayout 
				android:orientation="horizontal"
				android:layout_gravity="center_horizontal"
				android:gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="20dp"
				android:id="@+id/buttonArea"
				android:background="@drawable/buttonarea">
					<Button 
					style="@style/buttonText" 
					android:layout_marginLeft="5dp"
					android:layout_marginRight="5dp"
					android:background="@drawable/stopbuttonstates"
					android:textColor="#7A1100"
					android:shadowColor="#DF726E"
					android:text="@string/stopText"
					android:id="@+id/stopButton"
					android:visibility="gone"
					android:onClick="stopClick">
					</Button>
					<Button  
					style="@style/buttonText" 
					android:layout_marginLeft="5dp"
					android:background="@drawable/startbuttonstates"
					android:textColor="#5F3A00"
					android:shadowColor="#FBEBC5"
					android:text="@string/startText"
					android:id="@+id/startButton"
					android:onClick="startClick">
					</Button>
				</LinearLayout>
			    <LinearLayout 
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal">

				</LinearLayout>
				<ScrollView 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:id="@+id/scrollView">
					<TextView 
					style="@style/backgroundText" 
					android:text="@string/backgroundText"
					android:id="@+id/backgroundText">
					</TextView>
						
				</ScrollView>
			</LinearLayout>	
		</FrameLayout>
		<RelativeLayout 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true" >
			<LinearLayout 
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:id="@+id/adsLayout">
			</LinearLayout>
		</RelativeLayout>
	</RelativeLayout>
